# RayTracing_GL

./: CMakeLists.txt  README.md
Source/: Application.cpp  MyAppDelegate.cpp  MyAppDelegate.h  MyMTKViewDelegate.cpp  MyMTKViewDelegate.h  Renderer.cpp  Renderer.h  common_header.h
include/: FileSystem.h  camera.h  mesh.h  model.h  shader.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: Fragment_shader.glsl  common.glsl  shader.metal
src/: main.cpp
